# ai-project-scafold

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ollama/: Dockerfile  entrypoint.sh
scripts/: run_test.py  setup_db.py
src/epoch_explorer/: api.py  app.py  llm_interactions.db  mcp_logs.db
src/epoch_explorer/api/controllers/: user_controller.py
src/epoch_explorer/components/: pipeline.py
src/epoch_explorer/core/: config.py  logger.py
src/epoch_explorer/database/cache/: __init__.py  agent_memory_cache.py
src/epoch_explorer/database/db/: connection.py
src/epoch_explorer/database/migrations/: 001_create_companies.py  002_create_departments.py  003_create_users.py  004_create_roles.py  005_create_user_roles.py  006_create_company_users.py  007_create_department_users.py  008_create_document_metadata_table_rag.py  009_create_rag_history_table_rag.py  010_create_chunk_embedding_data_table_rag.py  012_create_cdr_mapping.py  013_knowledge_base.py
src/epoch_explorer/database/models/: __init__.py  base_model.py  chunk_embedding_data_model.py  company_department_role.py  department.py  department_user.py  document_metadata_model.py  queue.py  user.py  (+1 more)
src/epoch_explorer/mcp/: __init__.py  mcp_tools.py
src/epoch_explorer/models/: user.py
src/epoch_explorer/pages/: login.py  mcp_demo.py  rag_qa.py
src/epoch_explorer/routes/: __init__.py  chat.py  dto.py  health.py  mcp_api.py
src/epoch_explorer/services/: rag_pipeline.py
src/epoch_explorer/tracer/: tracer.py  tracer_instance.py  tracing.py
(+7 files in other folders)
